-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: 12.0.2, 13, 14, 15, 16
-
Component/s: client-libs
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8291016 | 15.0.9 | Yuri Nesterenko | P3 | Resolved | Fixed | b02 |
| JDK-8291033 | 13.0.13 | Yuri Nesterenko | P3 | Resolved | Fixed | b02 |
| JDK-8273587 | 11.0.14 | Martin Doerr | P3 | Resolved | Fixed | b01 |
| JDK-8270190 | 11.0.13-oracle | Philip Race | P3 | Resolved | Fixed | b02 |
I used following build.
$ ~/jdk-16.jdk/Contents/Home/bin/java -version
openjdk version "16-ea" 2021-03-16
OpenJDK Runtime Environment (build 16-ea+24-1553)
OpenJDK 64-Bit Server VM (build 16-ea+24-1553, mixed mode, sharing)
Please see attached screen shot and testcase.
According to my investigation, I could recreate this issue after JDK13.
I could not recreate this issue on JDK 12.0.1, but I could recreate it on JDK 12.0.2.
I assume this issue came from HarfBuzz upgrade (
Base update might be
In these days, HarfBuzz was upgrade by
- backported by
-
JDK-8270190 [macos] Unexpected symbol was displayed on JTextField with Monospaced font
-
- Resolved
-
-
JDK-8273587 [macos] Unexpected symbol was displayed on JTextField with Monospaced font
-
- Resolved
-
-
JDK-8291016 [macos] Unexpected symbol was displayed on JTextField with Monospaced font
-
- Resolved
-
-
JDK-8291033 [macos] Unexpected symbol was displayed on JTextField with Monospaced font
-
- Resolved
-
- duplicates
-
JDK-8227828 [macos] Sub/Superscript text is rendered with incorrect spacing between characters
-
- Closed
-
-
JDK-8180613 Layout is incorrect for rotated text
-
- Closed
-
-
JDK-8212744 [macos] Overlapping glyphs with harfbuzz + scaled AAT fonts
-
- Closed
-
- relates to
-
JDK-8247872 Upgrade HarfBuzz to 2.7.2
-
- Resolved
-
-
JDK-8210782 Upgrade HarfBuzz to 2.3.1
-
- Closed
-
-
JDK-8273321 java/awt/font/GlyphVector/NLGlyphTest.java fails on Linux
-
- Closed
-
-
JDK-8144012 [PIT][macosx] Failure of closed/java/awt/FontClass/FontStringBounds.java
-
- Resolved
-
- links to
-
Commit
openjdk/jdk11u-dev/a39375ef
-
Commit
openjdk/jdk13u-dev/2c66a09e
-
Commit
openjdk/jdk15u-dev/b1b32601
-
Commit
openjdk/jdk/005d8a7f
-
Review
openjdk/jdk11u-dev/317
-
Review
openjdk/jdk13u-dev/377
-
Review
openjdk/jdk15u-dev/240
-
Review
openjdk/jdk/4097