8256372: [macos] Unexpected symbol was displayed on JTextField with Monospaced font

Reviewed-by: clanger
Backport-of: 005d8a7fca8b4d9519d2bde0a7cdbbece1cd3981