src/java.desktop/share/classes/sun/font/SunLayoutEngine.java
@@ -173,11 +173,9 @@ public final class SunLayoutEngine implements LayoutEngine, LayoutEngineFactory 
                        Point2D.Float pt, GVData data) {
         Font2D font = key.font();
         FontStrike strike = font.getStrike(desc);
-        long pNativeFont = font.getPlatformNativeFontPtr(); // used on OSX
         long pFace = getFacePtr(font);
         if (pFace != 0) {
-            shape(font, strike, ptSize, mat, pNativeFont,
-                    pFace, isAAT(font),
+            shape(font, strike, ptSize, mat, pFace,
                     tr.text, data, key.script(),
                     tr.start, tr.limit, baseIndex, pt,
                     typo_flags, gmask);
@@ -187,13 +185,12 @@ public final class SunLayoutEngine implements LayoutEngine, LayoutEngineFactory 
     /* Native method to invoke harfbuzz layout engine */
     private static native boolean
         shape(Font2D font, FontStrike strike, float ptSize, float[] mat,
-              long pNativeFont, long pFace, boolean aat,
+              long pFace,
               char[] chars, GVData data,
               int script, int offset, int limit,
               int baseIndex, Point2D.Float pt, int typo_flags, int slot);
 
     private static native long createFace(Font2D font,
-                                          boolean aat,
                                           long platformNativeFontPtr);
 
     private static native void disposeFace(long facePtr);
@@ -208,7 +205,7 @@ public final class SunLayoutEngine implements LayoutEngine, LayoutEngineFactory 
 
         private synchronized long getNativePtr() {
             if (facePtr == null) {
-                facePtr = createFace(font, isAAT(font),
+                facePtr = createFace(font,
                         font.getPlatformNativeFontPtr());
                 if (facePtr != 0) {
                     Disposer.addObjectRecord(font, this);
